...
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    app:layout_constraintTop_toBottomOf="@id/address_tv"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <Button
                        android:id="@+id/get_directions_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:layout_margin="5dp"
                        android:backgroundTint="#295481"
                        android:layout_gravity="center"
                        android:text="Get Directions"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/address_tv" />
                    />

                    <Button
...
