<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:weightSum="100">


        <RelativeLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

<!--            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--                android:id="@+id/facilities_map_fragment_container"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->
            <fragment
                android:id="@+id/facilities_map_fragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </fragment>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/facilities_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>